# langchain-python-bootcamp

./: .gitignore  README.md  pyproject.toml
bootcamp/01_model_io/: 01_model_and_chat.ipynb  02_templates.ipynb  03_few_shot_prompt_templates.ipynb  04_parsing_output.ipynb  05_serialization.ipynb
bootcamp/02_data_connections/: 01_document_loaders.ipynb  02_integrations.ipynb  03_document_transformers.ipynb  04_embeddings.ipynb  05_vector_store.ipynb  06_context_compression.ipynb
bootcamp/03_chains/: chains.ipynb
bootcamp/04_memory/: conversation_memory.pkl  memory.ipynb
bootcamp/05_agents/: agents.ipynb
