[tool.poetry]
name = "langchain-python-bootcamp"
version = "0.1.0"
description = ""
authors = ["Vitor Manita <vmanita@outlook.pt>"]
readme = "README.md"
packages = [{include = "langchain_python_bootcamp"}]

[tool.poetry.dependencies]
python = "^3.11"
openai = "^0.27.10"
langchain = "^0.0.276"
beautifulsoup4 = "^4.12.2"
lxml = "^4.9.3"
pypdf = "^3.15.5"
wikipedia = "^1.4.0"
tiktoken = "^0.4.0"
chromadb = "0.3.26"
pandas = "2.0.3"
pyarrow = "^13.0.0"
google-search-results = "^2.4.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.1"
black = {extras = ["jupyter"], version = "^23.7.0"}
isort = {extras = ["jupyter"], version = "^5.12.0"}
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
